2008-01-04  Akim Demaille  <demaille@gostai.com>

	Uncomment.
	* svn-externals.mk: Code that should not have been commented.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Use externals-up in externals-up*.
	* svn-externals.mk: here.
	In order to also honor SVN_EXTERNALS_PROXY.

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Fixes and robustness.
	* base.as (stderr): Its arguments are lines.
	* children.as (children_kill): Missing "local".
	(children_status): Better error message.
	* instrument.as, urbi.as: Missing "local".

2008-01-04  Akim Demaille  <demaille@gostai.com>

	Use local for local variables.
	* children.as: Here.
	We had a for i loop calling a function using a for i loop too :(

2008-01-03  Akim Demaille  <demaille@gostai.com>

	rm -f.
	* children.as (children_register): The file should not exist, so use -f.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	Allow multiple calls to children_harvest.
	* children.as (children_harvest): Create the *.sta file only if
	it does not exist.
	(children_register): Support several arguments (to justify the plural).
	Destroy the sta files.

2008-01-03  Akim Demaille  <demaille@gostai.com>

	More children functions.
	* children.as (children_clean, children_report): New.
	(children_alive, chidren_kill, children_harvest, children_wait):
	Take an optional list of children.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	children_status.
	* children.as (children_status): New.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	children_wait.
	* children.as (children_wait): New.

2008-01-01  Akim Demaille  <demaille@gostai.com>

	More children operations.
	* children.as (register_child, kill_children, harvest_children):
	Rename as...
	(children_register, children_kill, children_harvest): these.
	(children_alive): New.
	* rst.as: Prefer -eq to = with numbers.

2007-12-24  Akim Demaille  <demaille@gostai.com>

	Fixes.
	* m4sh.mk (edit): Define TARNAME too.
	* urbi.as (check_dir): Fix a test.
