@@ -1,3 +1,8 @@
+2008-01-07  Akim Demaille  <demaille@gostai.com>
+
+	Check for sched.h and its functions.
+	* urbi-libport.m4: here.
+
 2008-01-04  Akim Demaille  <demaille@gostai.com>
 
 	Uncomment.
